2009-12-03  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/wix_mutex.pl: XBMC doesn't support file
  associations (actually opening files from command line)


2009-12-02  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/Website.url, win32/Makefile:
  use <File> instead of <IniFile> for the website link (0.5 kB smaller MSI)


2009-12-01  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: added "Uninstall shortcut"

* win32/setup/asap-dialog.jpg, win32/setup/asap-banner.jpg:
  optimized using "jhead -purejpg"


2009-11-30  Piotr Fusik  <fox@scene.pl>
* CREDITS, win32/setup/asap.wxs, win32/setup/asap-dialog.jpg,
  win32/setup/asap-banner.jpg, win32/Makefile: setup graphics by Pawel Szewczyk


2009-11-29  Piotr Fusik  <fox@scene.pl>
* asap.c: reject native modules which load in $d000-$d7ff
  - e.g. simply_tune.tm8 from Grayscale site


2009-11-27  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: WASAP icon on desktop


2009-11-26  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: shortcuts in the Programs menu


2009-11-25  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/wix_mutex.pl:
  setting multiple "Associate files" was possible with "Change"

* win32/setup/asap.wxs: file associations didn't appear in Winamp
  nor Apollo settings


2009-11-18  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/license.rtf, win32/setup/wix_mutex.pl,
  win32/Makefile: started implementing file associations; GUI improvements


2009-11-16  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: default selection and directories for plugins


2009-11-12  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/license.rtf, win32/Makefile:
  added license to the setup


2009-11-06  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: support upgrades and prevent downgrades


2009-10-28  Piotr Fusik  <fox@scene.pl>
* INSTALL, README, javascript/USAGE, win32/Makefile:
  JavaScript and Flash build and usage instructions

