@@ -1,0 +1,283 @@
+<?xml-stylesheet type="text/xsl" href="PORTS.xsl" ?>
+<ports>
+	<port name="ASAP2WAV">
+		<bin>Windows</bin>
+		<platform>desktop operating systems</platform>
+		<interface>command line</interface>
+		<since>0.1.0</since>
+		<status>stable</status>
+		<output>8 or 16-bit, WAV or raw, file or stdout</output>
+		<subsongs>yes</subsongs>
+		<file-info>no</file-info>
+		<edit-info>no</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>yes</config-time>
+		<mute-pokey>yes</mute-pokey>
+		<lang>C</lang>
+	</port>
+	<port name="WASAP">
+		<bin>Windows</bin>
+		<platform>Windows</platform>
+		<interface>GUI</interface>
+		<since>0.1.0</since>
+		<status>stable</status>
+		<output>16-bit, sound or WAV file</output>
+		<subsongs>yes</subsongs>
+		<file-info>yes</file-info>
+		<edit-info>yes</edit-info>
+		<convert-sap>yes</convert-sap>
+		<config-time>no</config-time>
+		<mute-pokey>no</mute-pokey>
+		<lang>C</lang>
+	</port>
+	<port name="Winamp plugin">
+		<bin>Windows</bin>
+		<platform>Windows</platform>
+		<interface>player plugin</interface>
+		<since>0.1.0</since>
+		<status>stable</status>
+		<output>16-bit sound</output>
+		<subsongs>yes</subsongs>
+		<file-info>yes</file-info>
+		<edit-info>yes</edit-info>
+		<convert-sap>yes</convert-sap>
+		<config-time>yes</config-time>
+		<mute-pokey>yes</mute-pokey>
+		<lang>C</lang>
+		<a href="http://www.winamp.com/">Winamp</a>
+	</port>
+	<port name="XMMS plugin">
+		<bin></bin>
+		<platform>Linux, Unix</platform>
+		<interface>player plugin</interface>
+		<since>0.2.0</since>
+		<status>stable</status>
+		<output>16-bit sound</output>
+		<subsongs>no</subsongs>
+		<file-info>no</file-info>
+		<edit-info>no</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>no</config-time>
+		<mute-pokey>no</mute-pokey>
+		<lang>C</lang>
+		<a href="http://xmms.org/">XMMS</a>
+	</port>
+	<port name="foobar2000 0.9 plugin">
+		<bin>Windows</bin>
+		<platform>Windows</platform>
+		<interface>player plugin</interface>
+		<since>0.2.0</since>
+		<status>stable</status>
+		<output>16-bit sound</output>
+		<subsongs>yes</subsongs>
+		<file-info>yes</file-info>
+		<edit-info>AUTHOR, NAME, DATE, but not TIME</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>yes</config-time>
+		<mute-pokey>yes</mute-pokey>
+		<lang>C, C++</lang>
+		<a href="http://foobar2000.org/">foobar2000</a>
+	</port>
+	<port name="GSPlayer">
+		<bin>Windows CE, Windows</bin>
+		<platform>Windows CE, Windows</platform>
+		<interface>player plugin</interface>
+		<since>0.3.0</since>
+		<status>stable</status>
+		<output>16-bit sound</output>
+		<subsongs>no</subsongs>
+		<file-info>AUTHOR, NAME</file-info>
+		<edit-info>no</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>yes</config-time>
+		<mute-pokey>yes</mute-pokey>
+		<lang>C</lang>
+		<a href="http://hp.vector.co.jp/authors/VA032810/">GSPlayer</a>
+	</port>
+	<port name="ASAP2WAV (Java)">
+		<bin>Java</bin>
+		<platform>desktop operating systems</platform>
+		<interface>command line</interface>
+		<since>1.0.0</since>
+		<status>stable</status>
+		<output>8 or 16-bit, WAV or raw, file or stdout</output>
+		<subsongs>yes</subsongs>
+		<file-info>no</file-info>
+		<edit-info>no</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>yes</config-time>
+		<mute-pokey>yes</mute-pokey>
+		<lang>Java</lang>
+	</port>
+	<port name="Java applet">
+		<bin>Java</bin>
+		<platform>web browser</platform>
+		<interface>via HTML or JavaScript</interface>
+		<since>1.0.0</since>
+		<status>stable</status>
+		<output>16-bit sound</output>
+		<subsongs>yes</subsongs>
+		<file-info>yes</file-info>
+		<edit-info>no</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>yes</config-time>
+		<mute-pokey>no</mute-pokey>
+		<lang>Java</lang>
+		<a href="http://asap.sourceforge.net/applet.html">online demo</a>
+	</port>
+	<port name="Java midlet">
+		<bin>Java</bin>
+		<platform>mobile devices</platform>
+		<interface>GUI</interface>
+		<since>1.0.0</since>
+		<status>in development</status>
+		<output>8-bit sound</output>
+		<subsongs>yes</subsongs>
+		<file-info>yes</file-info>
+		<edit-info>no</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>no</config-time>
+		<mute-pokey>no</mute-pokey>
+		<lang>Java</lang>
+	</port>
+	<port name="MOC plugin">
+		<bin></bin>
+		<platform>Linux, Unix</platform>
+		<interface>player plugin</interface>
+		<since>1.0.1</since>
+		<status>stable</status>
+		<output>16-bit sound</output>
+		<subsongs>no</subsongs>
+		<file-info>AUTHOR, NAME</file-info>
+		<edit-info>no</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>no</config-time>
+		<mute-pokey>no</mute-pokey>
+		<lang>C</lang>
+		<a href="http://moc.daper.net/">MOC</a>
+	</port>
+	<port name="Windows Media Player plugin">
+		<bin>Windows</bin>
+		<platform>Windows</platform>
+		<interface>player plugin</interface>
+		<since>1.2.0</since>
+		<status>stable</status>
+		<output>16-bit sound</output>
+		<subsongs>no</subsongs>
+		<file-info>no</file-info>
+		<edit-info>no</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>no</config-time>
+		<mute-pokey>no</mute-pokey>
+		<lang>C, C++</lang>
+		<a href="http://www.microsoft.com/windows/windowsmedia/player/">Windows Media Player</a>
+	</port>
+	<port name="Apollo plugin">
+		<bin>Windows</bin>
+		<platform>Windows</platform>
+		<interface>player plugin</interface>
+		<since>1.2.0</since>
+		<status>stable</status>
+		<output>16-bit sound</output>
+		<subsongs>no</subsongs>
+		<file-info>yes</file-info>
+		<edit-info>yes</edit-info>
+		<convert-sap>yes</convert-sap>
+		<config-time>yes</config-time>
+		<mute-pokey>yes</mute-pokey>
+		<lang>C, C++</lang>
+		<a href="http://koti.welho.com/hylinen/apollo/">Apollo</a>
+	</port>
+	<port name="ASAP2WAV (C#)">
+		<bin></bin>
+		<platform>desktop operating systems</platform>
+		<interface>command line</interface>
+		<since>1.2.0</since>
+		<status>stable</status>
+		<output>8 or 16-bit, WAV or raw file</output>
+		<subsongs>yes</subsongs>
+		<file-info>no</file-info>
+		<edit-info>no</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>yes</config-time>
+		<mute-pokey>yes</mute-pokey>
+		<lang>C#</lang>
+	</port>
+	<port name="XBMC plugin">
+		<bin>Windows</bin>
+		<platform>XBox, Windows, Linux</platform>
+		<interface>player plugin</interface>
+		<since>1.2.1</since>
+		<status>stable</status>
+		<output>16-bit sound</output>
+		<subsongs>yes</subsongs>
+		<file-info>yes</file-info>
+		<edit-info>no</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>no</config-time>
+		<mute-pokey>no</mute-pokey>
+		<lang>C</lang>
+		<a href="http://xbmc.org/">XBMC</a>
+	</port>
+	<port name="POKEY DLL for RMT">
+		<bin>Windows</bin>
+		<platform>Windows</platform>
+		<interface>composer plugin</interface>
+		<since>1.2.1</since>
+		<status>stable</status>
+		<output>8 or 16-bit sound</output>
+		<subsongs>N/A</subsongs>
+		<file-info>N/A</file-info>
+		<edit-info>N/A</edit-info>
+		<convert-sap>N/A</convert-sap>
+		<config-time>N/A</config-time>
+		<mute-pokey>N/A</mute-pokey>
+		<lang>C</lang>
+		<a href="http://raster.infos.cz/atari/rmt/rmt.htm">Raster Music Tracker</a>
+	</port>
+	<port name="ASAP2WAV (JScript)">
+		<bin></bin>
+		<platform>Windows</platform>
+		<interface>command line</interface>
+		<since>2.0.0</since>
+		<status>experimental</status>
+		<output>8 or 16-bit, WAV or raw file</output>
+		<subsongs>yes</subsongs>
+		<file-info>no</file-info>
+		<edit-info>no</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>yes</config-time>
+		<mute-pokey>yes</mute-pokey>
+		<lang>JScript</lang>
+	</port>
+	<port name="ASAP2WAV (browser JavaScript)">
+		<bin></bin>
+		<platform>Firefox</platform>
+		<interface>via JavaScript</interface>
+		<since>2.0.0</since>
+		<status>experimental</status>
+		<output>WAV file, 8 or 16-bit</output>
+		<subsongs>yes</subsongs>
+		<file-info>no</file-info>
+		<edit-info>no</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>yes</config-time>
+		<mute-pokey>no</mute-pokey>
+		<lang>JavaScript</lang>
+	</port>
+	<port name="Flash player">
+		<bin>Flash</bin>
+		<platform>Flash</platform>
+		<interface>via HTML or JavaScript</interface>
+		<since>2.0.0</since>
+		<status>in development</status>
+		<output>32-bit floating-point sound</output>
+		<subsongs>yes</subsongs>
+		<file-info>no</file-info><!-- TODO: yes -->
+		<edit-info>no</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>yes</config-time>
+		<mute-pokey>no</mute-pokey>
+		<lang>ActionScript 3</lang>
+	</port>
+</ports>
